RESOLVED FIXED269018
[WebGPU] color targets with undefined texture formats are not skipped in validation
https://bugs.webkit.org/show_bug.cgi?id=269018
Summary [WebGPU] color targets with undefined texture formats are not skipped in vali...
Mike Wyrzykowski
Reported 2024-02-08 13:57:20 PST
[WebGPU] color targets with undefined texture formats are not skipped in validation
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-08 13:58:12 PST
Mike Wyrzykowski
Comment 2 2024-02-08 14:00:37 PST
EWS
Comment 3 2024-02-08 17:59:31 PST
Committed 274334@main (c87a36b397bc): <https://commits.webkit.org/274334@main> Reviewed commits have been landed. Closing PR #24097 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.