[WebGPU] color targets with undefined texture formats are not skipped in validation https://bugs.webkit.org/show_bug.cgi?id=269018 <radar://122579838>

Reviewed by Dan Glastonbury.

The specification says we should not fail validation for empty formats.

* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(WebGPU::Device::createRenderBundleEncoder):

Canonical link: https://commits.webkit.org/274334@main